# Padr-es-de-Projetos

./: CMakeLists.txt  README.md
PADROES/: CMakeLists.txt  Fluxo.cpp  Fluxo.h  GeradorImagem.cpp.cpp  GeradorImagem.h.cpp  Hidrometro.cpp  Hidrometro.cpp.cpp  Hidrometro.h  Hidrometro.h.cpp  HidrometroApp.cpp  HidrometroApp.h  LeitorArquivo.cpp.cpp  LeitorArquivo.h.cpp  Medicao.cpp  dados_consumo.txt.txt  estrutura.txt  main.cpp  main.cpp.cpp  medicao.h
include/: Background.h  Constants.h  Hidrometro.h  ResourceManager.h  SliderVazao.h  Window.h
src/: Background.cpp  Hidrometro.cpp  ResourceManager.cpp  SliderVazao.cpp  Window.cpp  main.cpp
